--- a/Main.tex
+++ b/Main.tex
@@ -83,5 +83,6 @@
 %\input{Covers/02-Appendices}
 \input{Chapters/Appendices/01-AppendixA}
 \input{Chapters/Appendices/02-AppendixB}
+\input{Chapters/Appendices/03-AppendixC}
 
 \end{document}
