--- a/Miscellaneous/02-Glossary.tex
+++ b/Miscellaneous/02-Glossary.tex
@@ -1,74 +1,80 @@
 % Place here all the terms that need definition within your document.
-\newglossaryentry{$A_T$}{
+\newglossaryentry{A_T}{
     name = $A_T$,
     description = {Area at the Throat of the Nozzle.}
 }
 
-\newglossaryentry{$A*$}{
+\newglossaryentry{Astar}{
     name = $A*$,
     description = {Area at the nozzle's throat at mach one.}
 }
 
-\newglossaryentry{$A_S$}{
+\newglossaryentry{A_S}{
     name = $A_S$,
     description = {Area at the Shock.}
 }
 
-\newglossaryentry{$A_E$}{
+\newglossaryentry{A_E}{
     name = $A_T$,
     description = {Area at the Exit.}
 }
 
-\newglossaryentry{$M_1$}{
+\newglossaryentry{M}{
+    name = $M$,
+    description = {Mach number}
+}
+
+\newglossaryentry{M_1}{
     name = $M_1$,
     description = {Mach number upstream from the shock.}
 }
 
-\newglossaryentry{$M_2$}{
+\newglossaryentry{M_2}{
     name = $M_2$,
     description = {Mach number downstream from the shock.}
 }
 
-\newglossaryentry{$P_t1$}{
-    name = $P_t1$,
+\newglossaryentry{P_0}{
+    name = {$P_0$},
+    description = {Total or stagnation pressure}
+}
+
+\newglossaryentry{P_01}{
+    name = $P_{01}$,
     description = {Total Pressure at location t1.}
 }
 
-\newglossaryentry{$P_t2$}{
-    name = $P_t2$,
+\newglossaryentry{P_02}{
+    name = $P_{02}$,
     description = {Total Pressure at location t2.}
 }
 
-\newglossaryentry{$P_1$}{
+\newglossaryentry{P_1}{
     name = $P_1$,
     description = {Pressure at the upstream side of the shock.}
 }
 
-\newglossaryentry{$P_2$}{
+\newglossaryentry{P_2}{
     name = $P_2$,
     description = {Pressure at the downstream side of the shock.}
 }
 
-\newglossaryentry{$P_E$}{
+\newglossaryentry{P_E}{
     name = $P_E$,
     description = {Pressure at the Exit. }
 }
 
-\newglossaryentry{$P_atm$}{
-    name = $P_atm$,
+\newglossaryentry{P_atm}{
+    name = $P_{atm}$,
     description = {Pressure in the atmosphere. }
 }
 
-\newglossaryentry{$P_static$}{
-    name = $P_static$,
-    description = {Static pressure. }
+\newglossaryentry{P}{
+    name = $P$,
+    description = {Static pressure}
 }
 
-\newglossaryentry{\gamma}{
+\newglossaryentry{gamma}{
     name = $\gamma$,
     description = {Heat capacity Ratio  for air.(1.4)}
 }
-
-
-
-
