Updated table printing

--- a/Figures/2-3rd Critical Condition.tex
+++ b/Figures/2-3rd Critical Condition.tex
@@ -1,21 +1,21 @@
 \begin{tabular}{ccccccc}
 \toprule
-D_{throat} & P_{measured} & P_{theory} & P_{0,measured} & P_{0,theory} & M_{measured} & M_{theory} \\
+$D_{throat}$ & $P_{measured}$ & $P_{theory}$ & $P_{0,measured}$ & $P_{0,theory}$ & $M_{measured}$ & $M_{theory}$ \\
 \midrule
--4 & 14.6204 & 65.0526 & 52.2033 & 71.6502 & 1.4808 & 0.37405 \\ 
--1.5 & 48.175 & 52.6698 & 52.2033 & 71.6502 & 0.34066 & 0.67791 \\ 
--0.3 & 37.7753 & 42.2472 & 52.2033 & 71.6502 & 0.69581 & 0.90254 \\ 
--0.18 & 32.6767 & 40.9716 & 52.2033 & 71.6502 & 0.84624 & 0.93045 \\ 
-0 & 27.5781 & 38.1417 & 52.2033 & 71.6502 & 1 & 0.99344 \\ 
-0.15 & 20.8282 & 27.9366 & 52.2033 & 71.6502 & 1.2252 & 1.2426 \\ 
-0.3 & 22.4916 & 24.1994 & 52.2033 & 71.6502 & 1.1661 & 1.3483 \\ 
-0.45 & 21.5671 & 21.56 & 52.2033 & 71.6502 & 1.1986 & 1.4307 \\ 
-0.6 & 20.5896 & 19.5051 & 52.2033 & 71.6502 & 1.2339 & 1.5004 \\ 
-0.75 & 19.8577 & 17.8283 & 52.2033 & 71.6502 & 1.2611 & 1.562 \\ 
-0.9 & 17.5006 & 16.6079 & 52.2033 & 71.6502 & 1.3537 & 1.61 \\ 
-1.05 & 17.0107 & 15.5973 & 52.2033 & 71.6502 & 1.3741 & 1.6522 \\ 
-1.2 & 16.1593 & 15.0043 & 52.2033 & 71.6502 & 1.4107 & 1.678 \\ 
-1.35 & 15.2305 & 14.7488 & 52.2033 & 71.6502 & 1.4523 & 1.6894 \\ 
-1.45 & 15.1822 & 14.6488 & 52.2033 & 71.6502 & 1.4545 & 1.694 \\ 
+\num{-4} & \num{14.6204} & \num{65.0526} & \num{52.2033} & \num{71.6502} & \num{1.4808} & \num{0.37405} \\ 
+\num{-1.5} & \num{48.175} & \num{52.6698} & \num{52.2033} & \num{71.6502} & \num{0.34066} & \num{0.67791} \\ 
+\num{-0.3} & \num{37.7753} & \num{42.2472} & \num{52.2033} & \num{71.6502} & \num{0.69581} & \num{0.90254} \\ 
+\num{-0.18} & \num{32.6767} & \num{40.9716} & \num{52.2033} & \num{71.6502} & \num{0.84624} & \num{0.93045} \\ 
+\num{0} & \num{27.5781} & \num{38.1417} & \num{52.2033} & \num{71.6502} & \num{1} & \num{0.99344} \\ 
+\num{0.15} & \num{20.8282} & \num{27.9366} & \num{52.2033} & \num{71.6502} & \num{1.2252} & \num{1.2426} \\ 
+\num{0.3} & \num{22.4916} & \num{24.1994} & \num{52.2033} & \num{71.6502} & \num{1.1661} & \num{1.3483} \\ 
+\num{0.45} & \num{21.5671} & \num{21.56} & \num{52.2033} & \num{71.6502} & \num{1.1986} & \num{1.4307} \\ 
+\num{0.6} & \num{20.5896} & \num{19.5051} & \num{52.2033} & \num{71.6502} & \num{1.2339} & \num{1.5004} \\ 
+\num{0.75} & \num{19.8577} & \num{17.8283} & \num{52.2033} & \num{71.6502} & \num{1.2611} & \num{1.562} \\ 
+\num{0.9} & \num{17.5006} & \num{16.6079} & \num{52.2033} & \num{71.6502} & \num{1.3537} & \num{1.61} \\ 
+\num{1.05} & \num{17.0107} & \num{15.5973} & \num{52.2033} & \num{71.6502} & \num{1.3741} & \num{1.6522} \\ 
+\num{1.2} & \num{16.1593} & \num{15.0043} & \num{52.2033} & \num{71.6502} & \num{1.4107} & \num{1.678} \\ 
+\num{1.35} & \num{15.2305} & \num{14.7488} & \num{52.2033} & \num{71.6502} & \num{1.4523} & \num{1.6894} \\ 
+\num{1.45} & \num{15.1822} & \num{14.6488} & \num{52.2033} & \num{71.6502} & \num{1.4545} & \num{1.694} \\ 
 \bottomrule
 \end{tabular}
