--- a/Figures/3-Over-Expanded Flow.tex
+++ b/Figures/3-Over-Expanded Flow.tex
@@ -1,21 +1,21 @@
 \begin{tabular}{ccccccc}
 \toprule
-D_{throat} & P_{measured} & P_{theory} & P_{0,measured} & P_{0,theory} & M_{measured} & M_{theory} \\
+$D_{throat}$ & $P_{measured}$ & $P_{theory}$ & $P_{0,measured}$ & $P_{0,theory}$ & $M_{measured}$ & $M_{theory}$ \\
 \midrule
--4 & 14.6251 & 0 & 34.7218 & 0 & 1.1837 & 0.37405 \\ 
--1.5 & 31.5935 & 0 & 34.7218 & 0 & 0.36975 & 0.67791 \\ 
--0.3 & 24.7516 & 0 & 34.7218 & 0 & 0.71253 & 0.90254 \\ 
--0.18 & 21.5472 & 0 & 34.7218 & 0 & 0.85454 & 0.93045 \\ 
-0 & 18.3429 & 0 & 34.7218 & 0 & 1 & 0.99344 \\ 
-0.15 & 13.5654 & 0 & 34.7218 & 0 & 1.241 & 1.2426 \\ 
-0.3 & 14.8582 & 0 & 34.7218 & 0 & 1.1714 & 1.3483 \\ 
-0.45 & 14.1529 & 0 & 34.7218 & 0 & 1.2089 & 1.4307 \\ 
-0.6 & 13.5782 & 0 & 34.7218 & 0 & 1.2403 & 1.5004 \\ 
-0.75 & 13.1464 & 0 & 34.7218 & 0 & 1.2645 & 1.562 \\ 
-0.9 & 11.5813 & 0 & 34.7218 & 0 & 1.3574 & 1.61 \\ 
-1.05 & 11.3155 & 0 & 34.7218 & 0 & 1.374 & 1.6522 \\ 
-1.2 & 10.7207 & 0 & 34.7218 & 0 & 1.4125 & 1.678 \\ 
-1.35 & 10.1259 & 0 & 34.7218 & 0 & 1.4526 & 1.6894 \\ 
-1.45 & 10.9691 & 0 & 34.7218 & 0 & 1.3962 & 1.694 \\ 
+\num{-4} & \num{14.6251} & \num{0} & \num{34.7218} & \num{0} & \num{1.1837} & \num{0.37405} \\ 
+\num{-1.5} & \num{31.5935} & \num{0} & \num{34.7218} & \num{0} & \num{0.36975} & \num{0.67791} \\ 
+\num{-0.3} & \num{24.7516} & \num{0} & \num{34.7218} & \num{0} & \num{0.71253} & \num{0.90254} \\ 
+\num{-0.18} & \num{21.5472} & \num{0} & \num{34.7218} & \num{0} & \num{0.85454} & \num{0.93045} \\ 
+\num{0} & \num{18.3429} & \num{0} & \num{34.7218} & \num{0} & \num{1} & \num{0.99344} \\ 
+\num{0.15} & \num{13.5654} & \num{0} & \num{34.7218} & \num{0} & \num{1.241} & \num{1.2426} \\ 
+\num{0.3} & \num{14.8582} & \num{0} & \num{34.7218} & \num{0} & \num{1.1714} & \num{1.3483} \\ 
+\num{0.45} & \num{14.1529} & \num{0} & \num{34.7218} & \num{0} & \num{1.2089} & \num{1.4307} \\ 
+\num{0.6} & \num{13.5782} & \num{0} & \num{34.7218} & \num{0} & \num{1.2403} & \num{1.5004} \\ 
+\num{0.75} & \num{13.1464} & \num{0} & \num{34.7218} & \num{0} & \num{1.2645} & \num{1.562} \\ 
+\num{0.9} & \num{11.5813} & \num{0} & \num{34.7218} & \num{0} & \num{1.3574} & \num{1.61} \\ 
+\num{1.05} & \num{11.3155} & \num{0} & \num{34.7218} & \num{0} & \num{1.374} & \num{1.6522} \\ 
+\num{1.2} & \num{10.7207} & \num{0} & \num{34.7218} & \num{0} & \num{1.4125} & \num{1.678} \\ 
+\num{1.35} & \num{10.1259} & \num{0} & \num{34.7218} & \num{0} & \num{1.4526} & \num{1.6894} \\ 
+\num{1.45} & \num{10.9691} & \num{0} & \num{34.7218} & \num{0} & \num{1.3962} & \num{1.694} \\ 
 \bottomrule
 \end{tabular}
