--- a/Figures/4-2nd Critical Condition.tex
+++ b/Figures/4-2nd Critical Condition.tex
@@ -1,21 +1,21 @@
 \begin{tabular}{ccccccc}
 \toprule
-D_{throat} & P_{measured} & P_{theory} & P_{0,measured} & P_{0,theory} & M_{measured} & M_{theory} \\
+$D_{throat}$ & $P_{measured}$ & $P_{theory}$ & $P_{0,measured}$ & $P_{0,theory}$ & $M_{measured}$ & $M_{theory}$ \\
 \midrule
--4 & 14.6298 & 20.4501 & 29.1182 & 22.524 & 1.0424 & 0.37405 \\ 
--1.5 & 26.4005 & 16.5573 & 29.1182 & 22.524 & 0.37677 & 0.67791 \\ 
--0.3 & 20.6872 & 13.2809 & 29.1182 & 22.524 & 0.71624 & 0.90254 \\ 
--0.18 & 18.0349 & 12.8799 & 29.1182 & 22.524 & 0.85639 & 0.93045 \\ 
-0 & 15.3826 & 11.9903 & 29.1182 & 22.524 & 1 & 0.99344 \\ 
-0.15 & 11.3647 & 8.7822 & 29.1182 & 22.524 & 1.2418 & 1.2426 \\ 
-0.3 & 12.4739 & 7.6074 & 29.1182 & 22.524 & 1.1706 & 1.3483 \\ 
-0.45 & 11.8517 & 6.7776 & 29.1182 & 22.524 & 1.21 & 1.4307 \\ 
-0.6 & 11.3923 & 6.1316 & 29.1182 & 22.524 & 1.24 & 1.5004 \\ 
-0.75 & 11.0537 & 5.6045 & 29.1182 & 22.524 & 1.2626 & 1.562 \\ 
-0.9 & 9.7108 & 5.2209 & 29.1182 & 22.524 & 1.3575 & 1.61 \\ 
-1.05 & 9.5378 & 4.9032 & 29.1182 & 22.524 & 1.3704 & 1.6522 \\ 
-1.2 & 9.0036 & 4.7168 & 29.1182 & 22.524 & 1.4114 & 1.678 \\ 
-1.35 & 12.5661 & 4.6364 & 29.1182 & 22.524 & 1.1649 & 1.6894 \\ 
-1.45 & 14.0816 & 4.605 & 29.1182 & 22.524 & 1.074 & 1.694 \\ 
+\num{-4} & \num{14.6298} & \num{20.4501} & \num{29.1182} & \num{22.524} & \num{1.0424} & \num{0.37405} \\ 
+\num{-1.5} & \num{26.4005} & \num{16.5573} & \num{29.1182} & \num{22.524} & \num{0.37677} & \num{0.67791} \\ 
+\num{-0.3} & \num{20.6872} & \num{13.2809} & \num{29.1182} & \num{22.524} & \num{0.71624} & \num{0.90254} \\ 
+\num{-0.18} & \num{18.0349} & \num{12.8799} & \num{29.1182} & \num{22.524} & \num{0.85639} & \num{0.93045} \\ 
+\num{0} & \num{15.3826} & \num{11.9903} & \num{29.1182} & \num{22.524} & \num{1} & \num{0.99344} \\ 
+\num{0.15} & \num{11.3647} & \num{8.7822} & \num{29.1182} & \num{22.524} & \num{1.2418} & \num{1.2426} \\ 
+\num{0.3} & \num{12.4739} & \num{7.6074} & \num{29.1182} & \num{22.524} & \num{1.1706} & \num{1.3483} \\ 
+\num{0.45} & \num{11.8517} & \num{6.7776} & \num{29.1182} & \num{22.524} & \num{1.21} & \num{1.4307} \\ 
+\num{0.6} & \num{11.3923} & \num{6.1316} & \num{29.1182} & \num{22.524} & \num{1.24} & \num{1.5004} \\ 
+\num{0.75} & \num{11.0537} & \num{5.6045} & \num{29.1182} & \num{22.524} & \num{1.2626} & \num{1.562} \\ 
+\num{0.9} & \num{9.7108} & \num{5.2209} & \num{29.1182} & \num{22.524} & \num{1.3575} & \num{1.61} \\ 
+\num{1.05} & \num{9.5378} & \num{4.9032} & \num{29.1182} & \num{22.524} & \num{1.3704} & \num{1.6522} \\ 
+\num{1.2} & \num{9.0036} & \num{4.7168} & \num{29.1182} & \num{22.524} & \num{1.4114} & \num{1.678} \\ 
+\num{1.35} & \num{12.5661} & \num{4.6364} & \num{29.1182} & \num{22.524} & \num{1.1649} & \num{1.6894} \\ 
+\num{1.45} & \num{14.0816} & \num{4.605} & \num{29.1182} & \num{22.524} & \num{1.074} & \num{1.694} \\ 
 \bottomrule
 \end{tabular}
