--- a/Figures/5-Normal Shock Inside the Nozzle.tex
+++ b/Figures/5-Normal Shock Inside the Nozzle.tex
@@ -1,21 +1,21 @@
 \begin{tabular}{ccccccc}
 \toprule
-D_{throat} & P_{measured} & P_{theory} & P_{0,measured} & P_{0,theory} & M_{measured} & M_{theory} \\
+$D_{throat}$ & $P_{measured}$ & $P_{theory}$ & $P_{0,measured}$ & $P_{0,theory}$ & $M_{measured}$ & $M_{theory}$ \\
 \midrule
--4 & 14.6346 & 19.4259 & 21.5524 & 21.396 & 0.76468 & 0.37405 \\ 
--1.5 & 19.4032 & 15.7281 & 21.5524 & 21.396 & 0.39031 & 0.67791 \\ 
--0.3 & 15.2066 & 12.6157 & 21.5524 & 21.396 & 0.72381 & 0.90254 \\ 
--0.18 & 13.2962 & 12.2348 & 21.5524 & 21.396 & 0.86017 & 0.93045 \\ 
-0 & 11.3857 & 11.3898 & 21.5524 & 21.396 & 1 & 0.99344 \\ 
-0.15 & 8.4868 & 8.3423 & 21.5524 & 21.396 & 1.2351 & 1.2426 \\ 
-0.3 & 9.2425 & 7.2264 & 21.5524 & 21.396 & 1.1698 & 1.3483 \\ 
-0.45 & 8.7657 & 6.4382 & 21.5524 & 21.396 & 1.2106 & 1.4307 \\ 
-0.6 & 8.5621 & 5.8245 & 21.5524 & 21.396 & 1.2284 & 1.5004 \\ 
-0.75 & 8.3465 & 5.3238 & 21.5524 & 21.396 & 1.2477 & 1.562 \\ 
-0.9 & 11.6311 & 13.839 & 17.9788 & 18.864 & 0.81395 & 0.68021 \\ 
-1.05 & 12.2544 & 14.2689 & 17.9788 & 18.864 & 0.76072 & 0.64432 \\ 
-1.2 & 12.9605 & 14.5088 & 17.9788 & 18.864 & 0.70007 & 0.62404 \\ 
-1.35 & 14.0006 & 14.6097 & 17.9788 & 18.864 & 0.60856 & 0.61543 \\ 
-1.45 & 14.3143 & 14.6488 & 17.9788 & 18.864 & 0.58005 & 0.61209 \\ 
+\num{-4} & \num{14.6346} & \num{19.4259} & \num{21.5524} & \num{21.396} & \num{0.76468} & \num{0.37405} \\ 
+\num{-1.5} & \num{19.4032} & \num{15.7281} & \num{21.5524} & \num{21.396} & \num{0.39031} & \num{0.67791} \\ 
+\num{-0.3} & \num{15.2066} & \num{12.6157} & \num{21.5524} & \num{21.396} & \num{0.72381} & \num{0.90254} \\ 
+\num{-0.18} & \num{13.2962} & \num{12.2348} & \num{21.5524} & \num{21.396} & \num{0.86017} & \num{0.93045} \\ 
+\num{0} & \num{11.3857} & \num{11.3898} & \num{21.5524} & \num{21.396} & \num{1} & \num{0.99344} \\ 
+\num{0.15} & \num{8.4868} & \num{8.3423} & \num{21.5524} & \num{21.396} & \num{1.2351} & \num{1.2426} \\ 
+\num{0.3} & \num{9.2425} & \num{7.2264} & \num{21.5524} & \num{21.396} & \num{1.1698} & \num{1.3483} \\ 
+\num{0.45} & \num{8.7657} & \num{6.4382} & \num{21.5524} & \num{21.396} & \num{1.2106} & \num{1.4307} \\ 
+\num{0.6} & \num{8.5621} & \num{5.8245} & \num{21.5524} & \num{21.396} & \num{1.2284} & \num{1.5004} \\ 
+\num{0.75} & \num{8.3465} & \num{5.3238} & \num{21.5524} & \num{21.396} & \num{1.2477} & \num{1.562} \\ 
+\num{0.9} & \num{11.6311} & \num{13.839} & \num{17.9788} & \num{18.864} & \num{0.81395} & \num{0.68021} \\ 
+\num{1.05} & \num{12.2544} & \num{14.2689} & \num{17.9788} & \num{18.864} & \num{0.76072} & \num{0.64432} \\ 
+\num{1.2} & \num{12.9605} & \num{14.5088} & \num{17.9788} & \num{18.864} & \num{0.70007} & \num{0.62404} \\ 
+\num{1.35} & \num{14.0006} & \num{14.6097} & \num{17.9788} & \num{18.864} & \num{0.60856} & \num{0.61543} \\ 
+\num{1.45} & \num{14.3143} & \num{14.6488} & \num{17.9788} & \num{18.864} & \num{0.58005} & \num{0.61209} \\ 
 \bottomrule
 \end{tabular}
