--- a/Figures/1-Under-Expanded Flow.tex
+++ b/Figures/1-Under-Expanded Flow.tex
@@ -1,21 +1,21 @@
 \begin{tabular}{ccccccc}
 \toprule
-D_{throat} & P_{measured} & P_{theory} & P_{0,measured} & P_{0,theory} & M_{measured} & M_{theory} \\
+$D_{throat}$ & $P_{measured}$ & $P_{theory}$ & $P_{0,measured}$ & $P_{0,theory}$ & $M_{measured}$ & $M_{theory}$ \\
 \midrule
--4 & 14.6156 & 0 & 73.0108 & 0 & 1.7079 & 0.37405 \\ 
--1.5 & 69.1826 & 0 & 73.0108 & 0 & 0.27845 & 0.67791 \\ 
--0.3 & 54.3994 & 0 & 73.0108 & 0 & 0.66222 & 0.90254 \\ 
--0.18 & 46.4848 & 0 & 73.0108 & 0 & 0.82971 & 0.93045 \\ 
-0 & 38.5703 & 0 & 73.0108 & 0 & 1 & 0.99344 \\ 
-0.15 & 29.5121 & 0 & 73.0108 & 0 & 1.2153 & 1.2426 \\ 
-0.3 & 32.1691 & 0 & 73.0108 & 0 & 1.1486 & 1.3483 \\ 
-0.45 & 30.9689 & 0 & 73.0108 & 0 & 1.1783 & 1.4307 \\ 
-0.6 & 29.3717 & 0 & 73.0108 & 0 & 1.2189 & 1.5004 \\ 
-0.75 & 16.7753 & 0 & 73.0108 & 0 & 1.616 & 1.562 \\ 
-0.9 & 24.65 & 0 & 73.0108 & 0 & 1.3486 & 1.61 \\ 
-1.05 & 16.1771 & 0 & 73.0108 & 0 & 1.6403 & 1.6522 \\ 
-1.2 & 22.6618 & 0 & 73.0108 & 0 & 1.4087 & 1.678 \\ 
-1.35 & 21.7669 & 0 & 73.0108 & 0 & 1.4372 & 1.6894 \\ 
-1.45 & 21.592 & 0 & 73.0108 & 0 & 1.4428 & 1.694 \\ 
+\num{-4} & \num{14.6156} & \num{0} & \num{73.0108} & \num{0} & \num{1.7079} & \num{0.37405} \\ 
+\num{-1.5} & \num{69.1826} & \num{0} & \num{73.0108} & \num{0} & \num{0.27845} & \num{0.67791} \\ 
+\num{-0.3} & \num{54.3994} & \num{0} & \num{73.0108} & \num{0} & \num{0.66222} & \num{0.90254} \\ 
+\num{-0.18} & \num{46.4848} & \num{0} & \num{73.0108} & \num{0} & \num{0.82971} & \num{0.93045} \\ 
+\num{0} & \num{38.5703} & \num{0} & \num{73.0108} & \num{0} & \num{1} & \num{0.99344} \\ 
+\num{0.15} & \num{29.5121} & \num{0} & \num{73.0108} & \num{0} & \num{1.2153} & \num{1.2426} \\ 
+\num{0.3} & \num{32.1691} & \num{0} & \num{73.0108} & \num{0} & \num{1.1486} & \num{1.3483} \\ 
+\num{0.45} & \num{30.9689} & \num{0} & \num{73.0108} & \num{0} & \num{1.1783} & \num{1.4307} \\ 
+\num{0.6} & \num{29.3717} & \num{0} & \num{73.0108} & \num{0} & \num{1.2189} & \num{1.5004} \\ 
+\num{0.75} & \num{16.7753} & \num{0} & \num{73.0108} & \num{0} & \num{1.616} & \num{1.562} \\ 
+\num{0.9} & \num{24.65} & \num{0} & \num{73.0108} & \num{0} & \num{1.3486} & \num{1.61} \\ 
+\num{1.05} & \num{16.1771} & \num{0} & \num{73.0108} & \num{0} & \num{1.6403} & \num{1.6522} \\ 
+\num{1.2} & \num{22.6618} & \num{0} & \num{73.0108} & \num{0} & \num{1.4087} & \num{1.678} \\ 
+\num{1.35} & \num{21.7669} & \num{0} & \num{73.0108} & \num{0} & \num{1.4372} & \num{1.6894} \\ 
+\num{1.45} & \num{21.592} & \num{0} & \num{73.0108} & \num{0} & \num{1.4428} & \num{1.694} \\ 
 \bottomrule
 \end{tabular}
