--- a/Figures/6-1st Critical Condition.tex
+++ b/Figures/6-1st Critical Condition.tex
@@ -1,21 +1,21 @@
 \begin{tabular}{ccccccc}
 \toprule
-D_{throat} & P_{measured} & P_{theory} & P_{0,measured} & P_{0,theory} & M_{measured} & M_{theory} \\
+$D_{throat}$ & $P_{measured}$ & $P_{theory}$ & $P_{0,measured}$ & $P_{0,theory}$ & $M_{measured}$ & $M_{theory}$ \\
 \midrule
--4 & 14.6393 & 15.8208 & 17.0379 & 17.4252 & 0.47066 & 0.37405 \\ 
--1.5 & 14.3165 & 12.8092 & 17.0379 & 17.4252 & 0.50487 & 0.67791 \\ 
--0.3 & 11.5936 & 10.2744 & 17.0379 & 17.4252 & 0.76247 & 0.90254 \\ 
--0.18 & 10.2972 & 9.9642 & 17.0379 & 17.4252 & 0.8796 & 0.93045 \\ 
-0 & 9.0008 & 9.276 & 17.0379 & 17.4252 & 1 & 0.99344 \\ 
-0.15 & 11.8338 & 11.5859 & 17.0379 & 17.4252 & 0.74078 & 0.78638 \\ 
-0.3 & 12.5025 & 12.4653 & 17.0379 & 17.4252 & 0.67993 & 0.70864 \\ 
-0.45 & 13.036 & 13.0793 & 17.0379 & 17.4252 & 0.63045 & 0.65354 \\ 
-0.6 & 13.3601 & 13.5523 & 17.0379 & 17.4252 & 0.59978 & 0.61016 \\ 
-0.75 & 13.3366 & 13.9347 & 17.0379 & 17.4252 & 0.60202 & 0.57425 \\ 
-0.9 & 13.9405 & 14.2106 & 17.0379 & 17.4252 & 0.54314 & 0.54771 \\ 
-1.05 & 14.0266 & 14.4374 & 17.0379 & 17.4252 & 0.53451 & 0.52541 \\ 
-1.2 & 14.3658 & 14.5698 & 17.0379 & 17.4252 & 0.49973 & 0.51217 \\ 
-1.35 & 14.5249 & 14.6266 & 17.0379 & 17.4252 & 0.48295 & 0.50643 \\ 
-1.45 & 14.6246 & 14.6488 & 17.0379 & 17.4252 & 0.47226 & 0.50418 \\ 
+\num{-4} & \num{14.6393} & \num{15.8208} & \num{17.0379} & \num{17.4252} & \num{0.47066} & \num{0.37405} \\ 
+\num{-1.5} & \num{14.3165} & \num{12.8092} & \num{17.0379} & \num{17.4252} & \num{0.50487} & \num{0.67791} \\ 
+\num{-0.3} & \num{11.5936} & \num{10.2744} & \num{17.0379} & \num{17.4252} & \num{0.76247} & \num{0.90254} \\ 
+\num{-0.18} & \num{10.2972} & \num{9.9642} & \num{17.0379} & \num{17.4252} & \num{0.8796} & \num{0.93045} \\ 
+\num{0} & \num{9.0008} & \num{9.276} & \num{17.0379} & \num{17.4252} & \num{1} & \num{0.99344} \\ 
+\num{0.15} & \num{11.8338} & \num{11.5859} & \num{17.0379} & \num{17.4252} & \num{0.74078} & \num{0.78638} \\ 
+\num{0.3} & \num{12.5025} & \num{12.4653} & \num{17.0379} & \num{17.4252} & \num{0.67993} & \num{0.70864} \\ 
+\num{0.45} & \num{13.036} & \num{13.0793} & \num{17.0379} & \num{17.4252} & \num{0.63045} & \num{0.65354} \\ 
+\num{0.6} & \num{13.3601} & \num{13.5523} & \num{17.0379} & \num{17.4252} & \num{0.59978} & \num{0.61016} \\ 
+\num{0.75} & \num{13.3366} & \num{13.9347} & \num{17.0379} & \num{17.4252} & \num{0.60202} & \num{0.57425} \\ 
+\num{0.9} & \num{13.9405} & \num{14.2106} & \num{17.0379} & \num{17.4252} & \num{0.54314} & \num{0.54771} \\ 
+\num{1.05} & \num{14.0266} & \num{14.4374} & \num{17.0379} & \num{17.4252} & \num{0.53451} & \num{0.52541} \\ 
+\num{1.2} & \num{14.3658} & \num{14.5698} & \num{17.0379} & \num{17.4252} & \num{0.49973} & \num{0.51217} \\ 
+\num{1.35} & \num{14.5249} & \num{14.6266} & \num{17.0379} & \num{17.4252} & \num{0.48295} & \num{0.50643} \\ 
+\num{1.45} & \num{14.6246} & \num{14.6488} & \num{17.0379} & \num{17.4252} & \num{0.47226} & \num{0.50418} \\ 
 \bottomrule
 \end{tabular}
