Added units to table headers

--- a/Figures/2-3rd Critical Condition.tex
+++ b/Figures/2-3rd Critical Condition.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{ccccccc}
 \toprule
-$D_{throat}$ & $P_{measured}$ & $P_{theory}$ & $P_{0,measured}$ & $P_{0,theory}$ & $M_{measured}$ & $M_{theory}$ \\
+$D_\text{throat}$ [\unit{in}] & $P_\text{measured}$ [\unit{psi}] & $P_\text{theory}$ [\unit{psi}] & $P_{0,\text{measured}}$ [\unit{psi}] & $P_{0,\text{theory}}$ [\unit{psi}] & $M_\text{measured}$ & $M_\text{theory}$ \\
 \midrule
 \num{-4} & \num{14.6204} & \num{65.0526} & \num{52.2033} & \num{71.6502} & \num{1.4808} & \num{0.37405} \\ 
 \num{-1.5} & \num{48.175} & \num{52.6698} & \num{52.2033} & \num{71.6502} & \num{0.34066} & \num{0.67791} \\ 
