--- a/Figures/5-Normal Shock Inside the Nozzle.tex
+++ b/Figures/5-Normal Shock Inside the Nozzle.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{ccccccc}
 \toprule
-$D_{throat}$ & $P_{measured}$ & $P_{theory}$ & $P_{0,measured}$ & $P_{0,theory}$ & $M_{measured}$ & $M_{theory}$ \\
+$D_\text{throat}$ [\unit{in}] & $P_\text{measured}$ [\unit{psi}] & $P_\text{theory}$ [\unit{psi}] & $P_{0,\text{measured}}$ [\unit{psi}] & $P_{0,\text{theory}}$ [\unit{psi}] & $M_\text{measured}$ & $M_\text{theory}$ \\
 \midrule
 \num{-4} & \num{14.6346} & \num{19.4259} & \num{21.5524} & \num{21.396} & \num{0.76468} & \num{0.37405} \\ 
 \num{-1.5} & \num{19.4032} & \num{15.7281} & \num{21.5524} & \num{21.396} & \num{0.39031} & \num{0.67791} \\ 
