--- a/Figures/1-Under-Expanded Flow.tex
+++ b/Figures/1-Under-Expanded Flow.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{ccccccc}
 \toprule
-$D_{throat}$ & $P_{measured}$ & $P_{theory}$ & $P_{0,measured}$ & $P_{0,theory}$ & $M_{measured}$ & $M_{theory}$ \\
+$D_\text{throat}$ [\unit{in}] & $P_\text{measured}$ [\unit{psi}] & $P_\text{theory}$ [\unit{psi}] & $P_{0,\text{measured}}$ [\unit{psi}] & $P_{0,\text{theory}}$ [\unit{psi}] & $M_\text{measured}$ & $M_\text{theory}$ \\
 \midrule
 \num{-4} & \num{14.6156} & \num{0} & \num{73.0108} & \num{0} & \num{1.7079} & \num{0.37405} \\ 
 \num{-1.5} & \num{69.1826} & \num{0} & \num{73.0108} & \num{0} & \num{0.27845} & \num{0.67791} \\ 
