--- a/Figures/3-Over-Expanded Flow.tex
+++ b/Figures/3-Over-Expanded Flow.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{ccccccc}
 \toprule
-$D_{throat}$ & $P_{measured}$ & $P_{theory}$ & $P_{0,measured}$ & $P_{0,theory}$ & $M_{measured}$ & $M_{theory}$ \\
+$D_\text{throat}$ [\unit{in}] & $P_\text{measured}$ [\unit{psi}] & $P_\text{theory}$ [\unit{psi}] & $P_{0,\text{measured}}$ [\unit{psi}] & $P_{0,\text{theory}}$ [\unit{psi}] & $M_\text{measured}$ & $M_\text{theory}$ \\
 \midrule
 \num{-4} & \num{14.6251} & \num{0} & \num{34.7218} & \num{0} & \num{1.1837} & \num{0.37405} \\ 
 \num{-1.5} & \num{31.5935} & \num{0} & \num{34.7218} & \num{0} & \num{0.36975} & \num{0.67791} \\ 
