--- a/Figures/4-2nd Critical Condition.tex
+++ b/Figures/4-2nd Critical Condition.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{ccccccc}
 \toprule
-$D_{throat}$ & $P_{measured}$ & $P_{theory}$ & $P_{0,measured}$ & $P_{0,theory}$ & $M_{measured}$ & $M_{theory}$ \\
+$D_\text{throat}$ [\unit{in}] & $P_\text{measured}$ [\unit{psi}] & $P_\text{theory}$ [\unit{psi}] & $P_{0,\text{measured}}$ [\unit{psi}] & $P_{0,\text{theory}}$ [\unit{psi}] & $M_\text{measured}$ & $M_\text{theory}$ \\
 \midrule
 \num{-4} & \num{14.6298} & \num{20.4501} & \num{29.1182} & \num{22.524} & \num{1.0424} & \num{0.37405} \\ 
 \num{-1.5} & \num{26.4005} & \num{16.5573} & \num{29.1182} & \num{22.524} & \num{0.37677} & \num{0.67791} \\ 
