--- a/Figures/6-1st Critical Condition.tex
+++ b/Figures/6-1st Critical Condition.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{ccccccc}
 \toprule
-$D_{throat}$ & $P_{measured}$ & $P_{theory}$ & $P_{0,measured}$ & $P_{0,theory}$ & $M_{measured}$ & $M_{theory}$ \\
+$D_\text{throat}$ [\unit{in}] & $P_\text{measured}$ [\unit{psi}] & $P_\text{theory}$ [\unit{psi}] & $P_{0,\text{measured}}$ [\unit{psi}] & $P_{0,\text{theory}}$ [\unit{psi}] & $M_\text{measured}$ & $M_\text{theory}$ \\
 \midrule
 \num{-4} & \num{14.6393} & \num{15.8208} & \num{17.0379} & \num{17.4252} & \num{0.47066} & \num{0.37405} \\ 
 \num{-1.5} & \num{14.3165} & \num{12.8092} & \num{17.0379} & \num{17.4252} & \num{0.50487} & \num{0.67791} \\ 
