Updated tables to reflect proper sigfigs

--- a/Figures/1-Under-Expanded Flow.tex
+++ b/Figures/1-Under-Expanded Flow.tex
@@ -2,20 +2,20 @@
 \toprule
 $D_\text{throat}$ [\unit{in}] & $P_\text{measured}$ [\unit{psi}] & $P_\text{theory}$ [\unit{psi}] & $P_{0,\text{measured}}$ [\unit{psi}] & $P_{0,\text{theory}}$ [\unit{psi}] & $M_\text{measured}$ & $M_\text{theory}$ \\
 \midrule
-\num{-4} & \num{14.6156} & \num{0} & \num{73.0108} & \num{0} & \num{1.7079} & \num{0.37405} \\ 
-\num{-1.5} & \num{69.1826} & \num{0} & \num{73.0108} & \num{0} & \num{0.27845} & \num{0.67791} \\ 
-\num{-0.3} & \num{54.3994} & \num{0} & \num{73.0108} & \num{0} & \num{0.66222} & \num{0.90254} \\ 
-\num{-0.18} & \num{46.4848} & \num{0} & \num{73.0108} & \num{0} & \num{0.82971} & \num{0.93045} \\ 
-\num{0} & \num{38.5703} & \num{0} & \num{73.0108} & \num{0} & \num{1} & \num{0.99344} \\ 
-\num{0.15} & \num{29.5121} & \num{0} & \num{73.0108} & \num{0} & \num{1.2153} & \num{1.2426} \\ 
-\num{0.3} & \num{32.1691} & \num{0} & \num{73.0108} & \num{0} & \num{1.1486} & \num{1.3483} \\ 
-\num{0.45} & \num{30.9689} & \num{0} & \num{73.0108} & \num{0} & \num{1.1783} & \num{1.4307} \\ 
-\num{0.6} & \num{29.3717} & \num{0} & \num{73.0108} & \num{0} & \num{1.2189} & \num{1.5004} \\ 
-\num{0.75} & \num{16.7753} & \num{0} & \num{73.0108} & \num{0} & \num{1.616} & \num{1.562} \\ 
-\num{0.9} & \num{24.65} & \num{0} & \num{73.0108} & \num{0} & \num{1.3486} & \num{1.61} \\ 
-\num{1.05} & \num{16.1771} & \num{0} & \num{73.0108} & \num{0} & \num{1.6403} & \num{1.6522} \\ 
-\num{1.2} & \num{22.6618} & \num{0} & \num{73.0108} & \num{0} & \num{1.4087} & \num{1.678} \\ 
-\num{1.35} & \num{21.7669} & \num{0} & \num{73.0108} & \num{0} & \num{1.4372} & \num{1.6894} \\ 
-\num{1.45} & \num{21.592} & \num{0} & \num{73.0108} & \num{0} & \num{1.4428} & \num{1.694} \\ 
+\num{-4.0} & \num{14.6} &  & \num{73.0} &  & \num{1.71} & \num{0.374} \\ 
+\num{-1.5} & \num{69.2} &  & \num{73.0} &  & \num{0.278} & \num{0.678} \\ 
+\num{-0.30} & \num{54.4} &  & \num{73.0} &  & \num{0.662} & \num{0.903} \\ 
+\num{-0.18} & \num{46.5} &  & \num{73.0} &  & \num{0.830} & \num{0.930} \\ 
+\num{0.0} & \num{38.6} &  & \num{73.0} &  & \num{1.00} & \num{0.993} \\ 
+\num{0.15} & \num{29.5} &  & \num{73.0} &  & \num{1.22} & \num{1.24} \\ 
+\num{0.30} & \num{32.2} &  & \num{73.0} &  & \num{1.15} & \num{1.35} \\ 
+\num{0.45} & \num{31.0} &  & \num{73.0} &  & \num{1.18} & \num{1.43} \\ 
+\num{0.60} & \num{29.4} &  & \num{73.0} &  & \num{1.22} & \num{1.50} \\ 
+\num{0.75} & \num{16.8} &  & \num{73.0} &  & \num{1.62} & \num{1.56} \\ 
+\num{0.90} & \num{24.7} &  & \num{73.0} &  & \num{1.35} & \num{1.61} \\ 
+\num{1.1} & \num{16.2} &  & \num{73.0} &  & \num{1.64} & \num{1.65} \\ 
+\num{1.2} & \num{22.7} &  & \num{73.0} &  & \num{1.41} & \num{1.68} \\ 
+\num{1.4} & \num{21.8} &  & \num{73.0} &  & \num{1.44} & \num{1.69} \\ 
+\num{1.5} & \num{21.6} &  & \num{73.0} &  & \num{1.44} & \num{1.69} \\ 
 \bottomrule
 \end{tabular}
