--- a/Figures/3-Over-Expanded Flow.tex
+++ b/Figures/3-Over-Expanded Flow.tex
@@ -2,20 +2,20 @@
 \toprule
 $D_\text{throat}$ [\unit{in}] & $P_\text{measured}$ [\unit{psi}] & $P_\text{theory}$ [\unit{psi}] & $P_{0,\text{measured}}$ [\unit{psi}] & $P_{0,\text{theory}}$ [\unit{psi}] & $M_\text{measured}$ & $M_\text{theory}$ \\
 \midrule
-\num{-4} & \num{14.6251} & \num{0} & \num{34.7218} & \num{0} & \num{1.1837} & \num{0.37405} \\ 
-\num{-1.5} & \num{31.5935} & \num{0} & \num{34.7218} & \num{0} & \num{0.36975} & \num{0.67791} \\ 
-\num{-0.3} & \num{24.7516} & \num{0} & \num{34.7218} & \num{0} & \num{0.71253} & \num{0.90254} \\ 
-\num{-0.18} & \num{21.5472} & \num{0} & \num{34.7218} & \num{0} & \num{0.85454} & \num{0.93045} \\ 
-\num{0} & \num{18.3429} & \num{0} & \num{34.7218} & \num{0} & \num{1} & \num{0.99344} \\ 
-\num{0.15} & \num{13.5654} & \num{0} & \num{34.7218} & \num{0} & \num{1.241} & \num{1.2426} \\ 
-\num{0.3} & \num{14.8582} & \num{0} & \num{34.7218} & \num{0} & \num{1.1714} & \num{1.3483} \\ 
-\num{0.45} & \num{14.1529} & \num{0} & \num{34.7218} & \num{0} & \num{1.2089} & \num{1.4307} \\ 
-\num{0.6} & \num{13.5782} & \num{0} & \num{34.7218} & \num{0} & \num{1.2403} & \num{1.5004} \\ 
-\num{0.75} & \num{13.1464} & \num{0} & \num{34.7218} & \num{0} & \num{1.2645} & \num{1.562} \\ 
-\num{0.9} & \num{11.5813} & \num{0} & \num{34.7218} & \num{0} & \num{1.3574} & \num{1.61} \\ 
-\num{1.05} & \num{11.3155} & \num{0} & \num{34.7218} & \num{0} & \num{1.374} & \num{1.6522} \\ 
-\num{1.2} & \num{10.7207} & \num{0} & \num{34.7218} & \num{0} & \num{1.4125} & \num{1.678} \\ 
-\num{1.35} & \num{10.1259} & \num{0} & \num{34.7218} & \num{0} & \num{1.4526} & \num{1.6894} \\ 
-\num{1.45} & \num{10.9691} & \num{0} & \num{34.7218} & \num{0} & \num{1.3962} & \num{1.694} \\ 
+\num{-4.0} & \num{14.6} &  & \num{34.7} &  & \num{1.18} & \num{0.374} \\ 
+\num{-1.5} & \num{31.6} &  & \num{34.7} &  & \num{0.370} & \num{0.678} \\ 
+\num{-0.30} & \num{24.8} &  & \num{34.7} &  & \num{0.713} & \num{0.903} \\ 
+\num{-0.18} & \num{21.5} &  & \num{34.7} &  & \num{0.855} & \num{0.930} \\ 
+\num{0.0} & \num{18.3} &  & \num{34.7} &  & \num{1.00} & \num{0.993} \\ 
+\num{0.15} & \num{13.6} &  & \num{34.7} &  & \num{1.24} & \num{1.24} \\ 
+\num{0.30} & \num{14.9} &  & \num{34.7} &  & \num{1.17} & \num{1.35} \\ 
+\num{0.45} & \num{14.2} &  & \num{34.7} &  & \num{1.21} & \num{1.43} \\ 
+\num{0.60} & \num{13.6} &  & \num{34.7} &  & \num{1.24} & \num{1.50} \\ 
+\num{0.75} & \num{13.1} &  & \num{34.7} &  & \num{1.26} & \num{1.56} \\ 
+\num{0.90} & \num{11.6} &  & \num{34.7} &  & \num{1.36} & \num{1.61} \\ 
+\num{1.1} & \num{11.3} &  & \num{34.7} &  & \num{1.37} & \num{1.65} \\ 
+\num{1.2} & \num{10.7} &  & \num{34.7} &  & \num{1.41} & \num{1.68} \\ 
+\num{1.4} & \num{10.1} &  & \num{34.7} &  & \num{1.45} & \num{1.69} \\ 
+\num{1.5} & \num{11.0} &  & \num{34.7} &  & \num{1.40} & \num{1.69} \\ 
 \bottomrule
 \end{tabular}
