Updated column headers

--- a/Figures/6-1st Critical Condition.tex
+++ b/Figures/6-1st Critical Condition.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{ccccccc}
 \toprule
-$D_\text{throat}$ [\unit{in}] & $P_\text{measured}$ [\unit{psi}] & $P_\text{theory}$ [\unit{psi}] & $P_{0,\text{measured}}$ [\unit{psi}] & $P_{0,\text{theory}}$ [\unit{psi}] & $M_\text{measured}$ & $M_\text{theory}$ \\
+$D_t$ [\unit{in}] & $P_\text{meas}$ [\unit{psi}] & $P_\text{theory}$ [\unit{psi}] & $P_{0,\text{meas}}$ [\unit{psi}] & $P_{0,\text{theory}}$ [\unit{psi}] & $M_\text{meas}$ & $M_\text{theory}$ \\
 \midrule
 \num{-4.0} & \num{14.6} & \num{15.8} & \num{17.0} & \num{17.4} & \num{0.471} & \num{0.374} \\ 
 \num{-1.5} & \num{14.3} & \num{12.8} & \num{17.0} & \num{17.4} & \num{0.505} & \num{0.678} \\ 
