--- a/Figures/1-Under-Expanded Flow.tex
+++ b/Figures/1-Under-Expanded Flow.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{ccccccc}
 \toprule
-$D_\text{throat}$ [\unit{in}] & $P_\text{measured}$ [\unit{psi}] & $P_\text{theory}$ [\unit{psi}] & $P_{0,\text{measured}}$ [\unit{psi}] & $P_{0,\text{theory}}$ [\unit{psi}] & $M_\text{measured}$ & $M_\text{theory}$ \\
+$D_t$ [\unit{in}] & $P_\text{meas}$ [\unit{psi}] & $P_\text{theory}$ [\unit{psi}] & $P_{0,\text{meas}}$ [\unit{psi}] & $P_{0,\text{theory}}$ [\unit{psi}] & $M_\text{meas}$ & $M_\text{theory}$ \\
 \midrule
 \num{-4.0} & \num{14.6} &  & \num{73.0} &  & \num{1.71} & \num{0.374} \\ 
 \num{-1.5} & \num{69.2} &  & \num{73.0} &  & \num{0.278} & \num{0.678} \\ 
