--- a/Figures/2-3rd Critical Condition.tex
+++ b/Figures/2-3rd Critical Condition.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{ccccccc}
 \toprule
-$D_\text{throat}$ [\unit{in}] & $P_\text{measured}$ [\unit{psi}] & $P_\text{theory}$ [\unit{psi}] & $P_{0,\text{measured}}$ [\unit{psi}] & $P_{0,\text{theory}}$ [\unit{psi}] & $M_\text{measured}$ & $M_\text{theory}$ \\
+$D_t$ [\unit{in}] & $P_\text{meas}$ [\unit{psi}] & $P_\text{theory}$ [\unit{psi}] & $P_{0,\text{meas}}$ [\unit{psi}] & $P_{0,\text{theory}}$ [\unit{psi}] & $M_\text{meas}$ & $M_\text{theory}$ \\
 \midrule
 \num{-4.0} & \num{14.6} & \num{65.1} & \num{52.2} & \num{71.7} & \num{1.48} & \num{0.374} \\ 
 \num{-1.5} & \num{48.2} & \num{52.7} & \num{52.2} & \num{71.7} & \num{0.341} & \num{0.678} \\ 
