--- a/Figures/4-2nd Critical Condition.tex
+++ b/Figures/4-2nd Critical Condition.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{ccccccc}
 \toprule
-$D_\text{throat}$ [\unit{in}] & $P_\text{measured}$ [\unit{psi}] & $P_\text{theory}$ [\unit{psi}] & $P_{0,\text{measured}}$ [\unit{psi}] & $P_{0,\text{theory}}$ [\unit{psi}] & $M_\text{measured}$ & $M_\text{theory}$ \\
+$D_t$ [\unit{in}] & $P_\text{meas}$ [\unit{psi}] & $P_\text{theory}$ [\unit{psi}] & $P_{0,\text{meas}}$ [\unit{psi}] & $P_{0,\text{theory}}$ [\unit{psi}] & $M_\text{meas}$ & $M_\text{theory}$ \\
 \midrule
 \num{-4.0} & \num{14.6} & \num{20.5} & \num{29.1} & \num{22.5} & \num{1.04} & \num{0.374} \\ 
 \num{-1.5} & \num{26.4} & \num{16.6} & \num{29.1} & \num{22.5} & \num{0.377} & \num{0.678} \\ 
