Updates from Overleaf

--- a/Miscellaneous/02-Glossary.tex
+++ b/Miscellaneous/02-Glossary.tex
@@ -1,80 +1,68 @@
-% Place here all the terms that need definition within your document.
-\newglossaryentry{A_T}{
-    name = $A_T$,
-    description = {Area at the Throat of the Nozzle.}
+\newglossaryentry{A_t}{
+    name = $A_t$,
+    description = {Area at the throat in a de Laval nozzle}
 }
-
 \newglossaryentry{Astar}{
     name = $A*$,
-    description = {Area at the nozzle's throat at mach one.}
+    description = {Area at the sonic throat in a de Laval nozzle}
 }
-
-\newglossaryentry{A_S}{
-    name = $A_S$,
-    description = {Area at the Shock.}
+\newglossaryentry{A_s}{
+    name = $A_s$,
+    description = {Area at the location of a normal shock in the divergent section of a de Laval nozzle}
 }
-
-\newglossaryentry{A_E}{
-    name = $A_T$,
-    description = {Area at the Exit.}
+\newglossaryentry{A_e}{
+    name = $A_e$,
+    description = {Area at the exit of a de Laval nozzle}
 }
-
+\newglossaryentry{D_t}{
+    name = $D_t$,
+    description = {Distance from the throat in a de Laval nozzle}
+}
 \newglossaryentry{M}{
     name = $M$,
     description = {Mach number}
 }
-
 \newglossaryentry{M_1}{
     name = $M_1$,
-    description = {Mach number upstream from the shock.}
+    description = {Mach number upstream of a normal shock in the divergent section of a de Laval nozzle}
 }
-
 \newglossaryentry{M_2}{
     name = $M_2$,
-    description = {Mach number downstream from the shock.}
+    description = {Mach number downstream of a normal shock in the divergent section of a de Laval nozzle}
 }
-
 \newglossaryentry{P_0}{
     name = {$P_0$},
     description = {Total or stagnation pressure}
 }
-
 \newglossaryentry{P_01}{
     name = $P_{01}$,
-    description = {Total Pressure at location t1.}
+    description = {Total or stagnation pressure upstream of a normal shock in the divergent section of a de Laval nozzle}
 }
-
 \newglossaryentry{P_02}{
     name = $P_{02}$,
-    description = {Total Pressure at location t2.}
+    description = {Total or stagnation pressure downstream of a normal shock in the divergent section of a de Laval nozzle}
 }
-
 \newglossaryentry{P_1}{
     name = $P_1$,
-    description = {Pressure at the upstream side of the shock.}
+    description = {Pressure immediately upstream of a normal shock in the divergent section of a de Laval nozzle}
 }
-
 \newglossaryentry{P_2}{
     name = $P_2$,
-    description = {Pressure at the downstream side of the shock.}
+    description = {Pressure immediately downstream of a normal shock in the divergent section of a de Laval nozzle}
 }
-
-\newglossaryentry{P_E}{
-    name = $P_E$,
-    description = {Pressure at the Exit. }
+\newglossaryentry{P_e}{
+    name = $P_e$,
+    description = {Pressure at the exit of a de Laval nozzle}
 }
-
 \newglossaryentry{P_atm}{
     name = $P_{atm}$,
-    description = {Pressure in the atmosphere. }
+    description = {Ambient pressure}
 }
-
 \newglossaryentry{P}{
     name = $P$,
     description = {Static pressure}
 }
-
 \newglossaryentry{gamma}{
     name = $\gamma$,
-    description = {Heat capacity Ratio  for air.(1.4)}
+    description = {Heat capacity ratio for air}
 }
