Updates from Overleaf

--- a/Miscellaneous/02-Glossary.tex
+++ b/Miscellaneous/02-Glossary.tex
@@ -1,18 +1,30 @@
-\newglossaryentry{A_t}{
-    name = $A_t$,
-    description = {Area at the throat in a de Laval nozzle}
+\newglossaryentry{A}{
+    name = $A$,
+    description = {Local area in the nozzle}
 }
 \newglossaryentry{Astar}{
-    name = $A*$,
+    name = $A^*$,
     description = {Area at the sonic throat in a de Laval nozzle}
+}
+\newglossaryentry{Astar1}{
+    name = $A_2^*$,
+    description = {Sonic throat area upstream of the normal shock}
+}
+\newglossaryentry{Astar2}{
+    name = $A_2^*$,
+    description = {Virtual or reference sonic throat area downstream of the normal shock}
+}
+\newglossaryentry{A_e}{
+    name = $A_e$,
+    description = {Area at the exit of a de Laval nozzle}
 }
 \newglossaryentry{A_s}{
     name = $A_s$,
     description = {Area at the location of a normal shock in the divergent section of a de Laval nozzle}
 }
-\newglossaryentry{A_e}{
-    name = $A_e$,
-    description = {Area at the exit of a de Laval nozzle}
+\newglossaryentry{A_t}{
+    name = $A_t$,
+    description = {Area at the throat in a de Laval nozzle}
 }
 \newglossaryentry{D_t}{
     name = $D_t$,
@@ -29,6 +41,10 @@
 \newglossaryentry{M_2}{
     name = $M_2$,
     description = {Mach number downstream of a normal shock in the divergent section of a de Laval nozzle}
+}
+\newglossaryentry{P}{
+    name = $P$,
+    description = {Static pressure}
 }
 \newglossaryentry{P_0}{
     name = {$P_0$},
@@ -50,17 +66,17 @@
     name = $P_2$,
     description = {Pressure immediately downstream of a normal shock in the divergent section of a de Laval nozzle}
 }
+\newglossaryentry{P_atm}{
+    name = $P_\text{atm}$,
+    description = {Ambient pressure}
+}
 \newglossaryentry{P_e}{
     name = $P_e$,
     description = {Pressure at the exit of a de Laval nozzle}
 }
-\newglossaryentry{P_atm}{
-    name = $P_{atm}$,
-    description = {Ambient pressure}
-}
-\newglossaryentry{P}{
-    name = $P$,
-    description = {Static pressure}
+\newglossaryentry{P_g}{
+    name = $P_g$,
+    description = {Gauge pressure}
 }
 \newglossaryentry{gamma}{
     name = $\gamma$,
