--- a/Bibliography/Bibliography.bib
+++ b/Bibliography/Bibliography.bib
@@ -5,3 +5,9 @@
     organization = {Iowa State University},
     url = {https://www.aere.iastate.edu/~huhui/teaching/2024-01S/AerE344/lab-instruction/AerE344L-Lab-10-instruction.pdf},
 }
+@unpublished{2024durbin,
+    author = {Paul Durbin},
+    title = {AER E 311 Duct Flow},
+    year = {2024},
+    note = {Duct flow analysis PDF from Spring 2024 AER E 311 notes.}
+}
